adiciona link para linkedin

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="rodape_item">
                     <img class="rodape_icon" src="img/icon-linkedin.png" alt="icon linkedin">
-                    <span><a href="#" target="_blank" rel="noopener noreferrer">...</a></span>
+                    <span><a href="https://www.linkedin.com/in/vanessa-fran%C3%A7a-543bb12a5" target="_blank" rel="noopener noreferrer">Linkedin Vanessa França</a></span>
                 </div>
                 <div class="rodape_item">
                     <img class="rodape_icon" src="img/icon-github.png" alt="Icon Github">
