Adiciona sub título

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </section>
                 <section>
                     <h1 class="titulo">Vanessa Reis de França</h1>
-                    <h2 class="subtitulo">Acredite que merece o sucesso e trabalhe duro para conquistá-lo. </h2>
+                    <h2 class="subtitulo">Desenvolvedora Web </h2>
                     <p class="primeiro-paragrafo">Tenho 31 anos, sou mãe, casada, atualmente trabalho na àrea da educação, 
                        em uma escola,no cargo de Agente de Organização Escolar.
                     Moro em Embu-Guaçu, interior de São Paulo.</p> 
@@ -126,7 +126,7 @@
               </div>
           
               <button type="submit">Enviar</button>
-              <!-- Desativa CAPTCHA -->
+        
               <input type="hidden" name="_captcha" value="false">
               <form action="https://formsubmit.co/vanessareis99@yahoo.com" method="POST" target="_self">
 
